# software_inferno

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  openapi.yml  pyproject.toml
api/: gunicorn.conf.py
api/core/: models.py  serializers.py  views.py
api/core/migrations/: 0001_initial.py
api/core/repositories/: software_repository.py
api/core/repositories/database_module/: setup_database.py
api/core/services/: software_by_name_service.py  software_service.py
api/general/: settings.py  urls.py
client/: index.html
core/: serializers.py  urls.py  views.py
core/repositories/: software_repository.py
core/repositories/database_module/: __init__.py  execute_query.py  setup.py
core/services/: software_by_name_service.py  software_service.py
core/services/database_module/: __init__.py  setup_database.py
general/: settings.py
infra/client/: Dockerfile  nginx.conf
infra/django/: Dockerfile
infra/nginx/: Dockerfile  nginx.conf
